--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,29 @@
 <resources>
-    <string name="app_name">Top Dark</string>
-    <string name="password">Password</string>
-    <string name="user">User</string>
-    <string name="login_name">Username</string>
-    <string name="password_name">password</string>
-    <string name="button_login">Login</string>
+    <string name="app_name">TopDark</string>
+    <string name="title_activity_login">LoginActivity</string>
+    <string name="prompt_email">Email</string>
+    <string name="prompt_password">Password</string>
+    <string name="action_sign_in">Sign in </string>
+    <string name="action_sign_in_short">Sign in</string>
+    <string name="welcome">"Welcome !"</string>
+    <string name="invalid_username">Not a valid username</string>
+    <string name="invalid_password">Password must be >5 characters</string>
+    <string name="login_failed">"Login failed"</string>
+    <string name="title_activity_vader">Activity_Vader</string>
+    <!-- Strings used for fragments for navigation -->
+    <string name="first_fragment_label">First Fragment</string>
+    <string name="second_fragment_label">Second Fragment</string>
+    <string name="next">Next</string>
+    <string name="previous">Previous</string>
+
+    <string name="hello_first_fragment">Hello first fragment</string>
+    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
+    <string name="alta_piloto">Dar de alta un piloto</string>
+    <string name="alta_nave">Dar de alta una nave</string>
+    <string name="alta_mision">Dar de alta una mision</string>
+    <string name="asignar_piloto">Asignar piloto a mision</string>
+    <string name="ranking_pilotos">Ver ranking de pilotos</string>
+    <string name="welcome_text">Bienvenido,</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
