--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="app_name">TopDark</string>
     <string name="title_activity_login">LoginActivity</string>
-    <string name="prompt_email">Email</string>
+    <string name="prompt_user">User</string>
     <string name="prompt_password">Password</string>
     <string name="action_sign_in">Sign in </string>
     <string name="action_sign_in_short">Sign in</string>
@@ -12,18 +12,31 @@
     <string name="title_activity_vader">Activity_Vader</string>
     <!-- Strings used for fragments for navigation -->
     <string name="first_fragment_label">First Fragment</string>
-    <string name="second_fragment_label">Second Fragment</string>
     <string name="next">Next</string>
     <string name="previous">Previous</string>
 
     <string name="hello_first_fragment">Hello first fragment</string>
-    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
-    <string name="alta_piloto">Dar de alta un piloto</string>
-    <string name="alta_nave">Dar de alta una nave</string>
-    <string name="alta_mision">Dar de alta una mision</string>
-    <string name="asignar_piloto">Asignar piloto a mision</string>
-    <string name="ranking_pilotos">Ver ranking de pilotos</string>
-    <string name="welcome_text">Bienvenido,</string>
+    <string name="register_pilot">Register a pilot</string>
+    <string name="register_ship">Register a ship</string>
+    <string name="register_mission">Register a mission</string>
+    <string name="register_pilot_mission">Assign pilot to mission</string>
+    <string name="ranking_pilot">Pilot\'s ranking</string>
+    <string name="welcome_text">Welcome,</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="avatar">Avatar</string>
+    <string name="pilot_experience">Experience</string>
+    <string name="camera">Camera</string>
+    <string name="folder">Phone storage</string>
+    <string name="back_button">Back</string>
+    <string name="camera_fail">Camera could not be used due to lack of permissions</string>
+    <string name="ship_plate">Plate</string>
+    <string name="cargo">Can cargo?</string>
+    <string name="passengers">Can passengers?</string>
+    <string name="passengers_question">Passengers?</string>
+    <string name="cargo_question">Cargo?</string>
+    <string name="flight_duration">Duration of the flight</string>
+    <string name="targets">Amount of targets</string>
+    <string name="enemies">Amount of enemies</string>
+    <string name="accept">Accept</string>
 </resources>
